[package]
name = "git-cm"
description = "A git command that generates conventional-friendly commit messages."
repository = "https://github.com/SirWindfield/git-cm"
documentation = "https://docs.rs/git-cm"
readme = "README.md"
keywords = ["commit", "commitizen", "git"]
categories = ["command-line-utilities", "development-tools"]
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
cargo_toml = "*"
clap = { git = "https://github.com/clap-rs/clap/" } 
console = "*"
ctrlc = "*"
dialoguer = "*"
edit = "*"
git2 = "*"
itertools = "*"
once_cell = "*"
serde = { version = "*", features = ["derive"] }

[package.metadata.commits]
defaults = true
